[sm] updated workbench years and fixed some mobile spacing

--- a/resume/styles.css
+++ b/resume/styles.css
@@ -60,7 +60,7 @@ body {
   max-width: 700px;
   border-bottom: #ffd978 4px solid;
   background:white;
-  padding: 20px 20px 20px;
+  padding: 10px;
   width: 100%;
   margin: 0 auto;
   box-shadow: 0px 0px 10px 0px rgba(29, 7, 0, 0.1 );
@@ -164,6 +164,9 @@ body {
   }
   .header-contact {
     text-align: right;
+  }
+  .paper-header, .paper-body {
+    padding: 25px;
   }
 }
 
